@@ -1,8 +1,10 @@
 package com.yzd.jutils.javaAndJsExt;
 
+
+
+import com.yzd.jutils.rsaExt.Base64;
+
 import java.io.UnsupportedEncodingException;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class _MainTest {
     // 加密
@@ -15,7 +17,7 @@ public class _MainTest {
             e.printStackTrace();
         }
         if (b != null) {
-            s = new BASE64Encoder().encode(b);
+            s = Base64.encode(b);
             //据RFC 822规定，每76个字符，还需要加上一个回车换行去掉换行符
             s = s.replaceAll("[\\s*\t\n\r]", "");
         }
@@ -27,9 +29,8 @@ public class _MainTest {
         byte[] b = null;
         String result = null;
         if (s != null) {
-            BASE64Decoder decoder = new BASE64Decoder();
             try {
-                b = decoder.decodeBuffer(s);
+                b = Base64.decode(s);
                 result = new String(b, "utf-8");
             } catch (Exception e) {
                 e.printStackTrace();
@@ -40,15 +41,16 @@ public class _MainTest {
 
     /**
      * Base64-java版
+     *
      * @param args
      */
-    public static void main(String[] args){
+    public static void main(String[] args) {
         //使用统一的UTF-8编码
         String s = "你好world";
         //System.out.println(s.length());
         String enStr = encode(s);
         String deStr = decode(enStr);
-        System.out.println("原始数据："+s+"\n加密数据："+enStr+"\n解密数据："+deStr);
+        System.out.println("原始数据：" + s + "\n加密数据：" + enStr + "\n解密数据：" + deStr);
         System.out.println("5L2g5aW9d29ybGQ=".equals(enStr));
     }
 }
